# automotive-security-capstone

./: Makefile  README.md  run_hal_example.py
.github/workflows/: python-publish.yml
.kiro/hooks/: backend-docs-sync.kiro.hook
.kiro/steering/: deployment.md  development.md  product.md  security.md  structure.md  tech.md
.windsurf/rules/: code-guide.md  tool-usage.md
.windsurf/workflows/: file-changes.md
backend/: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  cli_dashboard.py  cli_dashboard_detection_adapter.py  demo_scenarios.py  deploy_pico.py  main.py  playground-alerts.mongodb.js  pyproject.toml  pytest.ini  real_hardware_launcher.py  requirements.txt  setup.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  logger.py
backend/app/db/: mongodb.py
backend/app/models/: base.py
backend/comms/: ble.py  encryption.py  wifi.py
backend/config/: settings.yml
backend/detection/: __init__.py  alert.py  anomaly.py  event_logic.py  jamming_detector.py  nfc_detection.py  packet.py  replay_attack_detector.py  rf_detection.py  security_analyzer.py  security_report.py  threat_levels.py
backend/docs/: Architecture_Presentation_Guide.md  CHANGELOG.md  ENHANCED_SIGNAL_PROCESSING_SUMMARY.md  README_PDF_Conversion.md  REAL_HARDWARE_SETUP.md  detection_logic_explained.md  testing_guide.md
backend/docs/api/: cli_dashboard_api.md  detection_api.md  enhanced_signal_processing.md  hardware_management.md  nfc_correlation.md  validation_framework.md
backend/docs/deployment/: real_hardware_setup.md
backend/docs/diagrams/: architecture.drawio  architecture.md  summary.md
backend/docs/optimization/: BACKEND_DOCS_SYNC_SUMMARY.md  COMPREHENSIVE_FIXES_SUMMARY.md  ENHANCED_FEATURES_QUICK_REFERENCE.md  ENHANCED_SIGNAL_PROCESSING_IMPLEMENTATION.md  ENHANCED_SIGNAL_PROCESSING_SUMMARY.md  HELP_FUNCTIONALITY_FIX.md  LOGGING_INTEGRATION_SUMMARY.md  PERFORMANCE_TEST_OPTIMIZATION.md  README.md  TASK_4_3_COMPLETION_SUMMARY.md  TESTING_IMPROVEMENTS_SUMMARY.md
backend/docs/plans/: burst_analysis_session_20240613.md  development-roadmap.md  edge_device_next_steps.md  llm-system-prompt.md  nfc_correlation_implementation.md  plan-2025-07-30-173800.md  plan-2025-07-30-202400.md
backend/docs/plans/migration_old/: migration_plan.md  poc_migration_plan.md
backend/docs/report/: Final Report.docx
backend/docs/report/to_insert/: code_snippets.md  command_line_usage.md  deployment.md  environment_setup.md  section_e_architecture.md  signal_filtering_verification.md
backend/docs/system_plans/: Architecture_Narrative_Explanation.md  Architecture_Quick_Reference.md  detection_logic_explained.md  enhanced_signal_processing.md
backend/hardware/: README.md  __init__.py  antenna.py  circuit.md  dao.py  device.py  factory.py  hardware_manager.py  log_utils.py  pico_connection_manager.py  pn532.py  power.py  recovery_system.py  report_logic.py  rtl_sdr.py  rtl_sdr_interface.py  setup.py  signal_filter.py  version.py
backend/hardware/core/: __init__.py  antenna.py  device.py  factory.py  packet.py  signal_processor.py
backend/hardware/core/dao/: __init__.py  dao.py
backend/hardware/docs/: hal_design.md
backend/hardware/drivers/: pn532.py
backend/hardware/drivers/mock/: power.py  rf.py  status.py
backend/hardware/drivers/rtl_sdr/: sdr_driver.py
backend/hardware/examples/: hal_example.py
backend/hardware/exceptions/: __init__.py  exceptions.py
backend/hardware/implementations/: mock_rf.py
backend/hardware/interfaces/: __init__.py  mock_rf.py  power.py  rf.py  status.py
backend/hardware/mock/: nfc.py  rf.py
backend/hardware/models/: __init__.py  models.py
backend/hardware/tests/: test_dao.py  test_device.py  test_log_utils.py  test_packet.py  test_report_logic.py  test_signal_filter.py
backend/hardware/utils/: __init__.py  logger.py  reporter.py
backend/logging/: log_format.py
backend/pico/: NFC_PN532.py  __init__.py  config.py  main.py
backend/results/validation_20250730_190836/: accuracy_results.md
backend/results/validation_20250730_191601/: accuracy_results.md
backend/results/validation_20250730_202057/: accuracy_results.md
backend/rtl_sdr/: __init__.py  automotive_signal_analyzer.py  brute_force_detector.py  enhanced_signal_bridge.py  rtl_tcp_server.py  signal_bridge.py  signal_history_buffer.py  startup_server.py
backend/rtl_sdr/recordings/scripts/: .gitattributes  advanced_burst_analysis.py  decode_signals.py  extract_fields.py  field_alignment.py  raw_2_float32.py  split_bursts.py  wav_2_iq.py
backend/rtl_sdr/recordings/signals/: isolated_signal.complex
backend/rtl_sdr/recordings/signals/analyze/: all_bursts.txt  binary_output.txt  bit_level_invariance.txt  byte_shift_alignment.txt  decoded_signals.txt  extracted_fields.txt  field_alignment_table.txt  pairwise_clusters.txt  partial_invariance.txt
backend/tests/: __init__.py  conftest.py  demo_performance_monitoring.py  test_automotive_signal_analyzer.py  test_brute_force_detector.py  test_cli_dashboard_scrolling.py  test_dashboard_logging.py  test_dashboard_performance.py  test_dashboard_with_logging.py  test_enhanced_signal_bridge.py  test_event_logic.py  test_health.py  test_help_functionality.py  test_jamming_detector.py  test_performance_integration.py  test_pico_nfc_correlation.py  test_plan.md  test_pretty_logging.py  test_real_hardware.py  test_replay_attack_detector.py  test_rtl_tcp_server.py  test_signal_bridge.py  test_simple_performance_monitor.py
backend/tests/hardware/: __init__.py  test_dao.py  test_device.py  test_log_utils.py  test_packet.py  test_report_logic.py  test_rf_interface.py  test_signal_filter.py
backend/utils/: __init__.py  config_loader.py  data_utils.py  detection_accuracy.py  exit_dialog.py  logging_config.py  signal_constants.py  simple_performance_monitor.py  time_utils.py  validate_detection_accuracy.py
frontend/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/test/: widget_test.dart
(+23 files in other folders)
