[project]
name = "automotive-security-backend"
version = "0.1.0"
description = "Backend for Automotive Security Capstone Project"
authors = [
    {name = "Jonathan Marien", email = "jon@chron0.tech"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "motor>=3.7.1",
    "numpy>=1.26.4",
    "asyncio>=3.4.3",
    "aiohttp>=3.12.15",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["pico", "rtl_sdr", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
